[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main Project/Level/Tiger Player-Goat AI  (easy)/Tiger for player.gd" type="Script" id=1]
[ext_resource path="res://Main Project/Level/Tiger Player-Goat AI  (easy)/Goat for easy AI .gd" type="Script" id=2]
[ext_resource path="res://Main Project/Player/Tiger Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main Project/Board/Board.tscn" type="PackedScene" id=4]
[ext_resource path="res://Lines.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main Project/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main Project/DropZone/dropzone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main Project/Player/Goat AI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Main Project/GamePlay Scripts.gd" type="Script" id=9]

[node name="Goat AI  Easy" type="Node2D"]
script = ExtResource( 9 )

[node name="Board" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.12929, 4.32288 )
scale = Vector2( 0.784856, 1.00961 )

[node name="HUD" parent="." instance=ExtResource( 6 )]
position = Vector2( 976, 0 )
scale = Vector2( 1.15784, 1.02025 )

[node name="Lines" parent="." instance=ExtResource( 5 )]

[node name="Zone1" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 100 )

[node name="Zone2" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 100 )

[node name="Zone3" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 100 )

[node name="Zone4" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 100 )

[node name="Zone5" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 100 )

[node name="Zone6" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 200 )

[node name="Zone7" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 200 )

[node name="Zone8" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 200 )

[node name="Zone9" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 200 )

[node name="Zone10" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 200 )

[node name="Zone11" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 300 )

[node name="Zone12" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 300 )

[node name="Zone13" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 300 )

[node name="Zone14" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 300 )

[node name="Zone15" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 300 )

[node name="Zone16" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 400 )

[node name="Zone17" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 400 )

[node name="Zone18" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 400 )

[node name="Zone19" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 400 )

[node name="Zone20" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 400 )

[node name="Zone21" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 500 )

[node name="Zone22" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 500 )

[node name="Zone23" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 500 )

[node name="Zone24" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 500 )

[node name="Zone25" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 500 )

[node name="Tiger" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Tiger Player" parent="Tiger" instance=ExtResource( 3 )]
position = Vector2( 200, 100 )

[node name="Tiger Player2" parent="Tiger" instance=ExtResource( 3 )]
position = Vector2( 600, 100 )

[node name="Tiger Player3" parent="Tiger" instance=ExtResource( 3 )]
position = Vector2( 200, 500 )

[node name="Tiger Player4" parent="Tiger" instance=ExtResource( 3 )]
position = Vector2( 600, 500 )

[node name="Goat" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Goat AI" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 793.26, 59.2222 )

[node name="Goat AI2" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 883.7, 116.501 )

[node name="Goat AI3" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 791.753, 179.809 )

[node name="Goat AI4" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 874.656, 247.639 )

[node name="Goat AI5" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 790.256, 329.732 )

[node name="Goat AI6" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 872.886, 400.055 )

[node name="Goat AI7" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 784.982, 468.358 )

[node name="Goat AI8" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 860.579, 529.891 )

[node name="Goat AI9" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 688, 632 )

[node name="Goat AI10" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 777.949, 589.666 )

[node name="Goat AI11" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 176, 632 )

[node name="Goat AI12" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 560, 608 )

[node name="Goat AI13" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 72, 592 )

[node name="Goat AI14" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 424, 600 )

[node name="Goat AI15" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 472 )

[node name="Goat AI16" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 288, 600 )

[node name="Goat AI17" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 368 )

[node name="Goat AI18" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 256 )

[node name="Goat AI19" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 160 )

[node name="Goat AI20" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 56 )
[connection signal="tigerplayerturnfinished" from="Tiger/Tiger Player" to="Goat" method="_on_Tiger_Player_tigerplayerturnfinished"]
[connection signal="tigerplayerturnfinished" from="Tiger/Tiger Player2" to="Goat" method="_on_Tiger_Player2_tigerplayerturnfinished"]
[connection signal="tigerplayerturnfinished" from="Tiger/Tiger Player3" to="Goat" method="_on_Tiger_Player3_tigerplayerturnfinished"]
[connection signal="tigerplayerturnfinished" from="Tiger/Tiger Player4" to="Goat" method="_on_Tiger_Player4_tigerplayerturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI" to="Tiger" method="_on_Goat_AI_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI2" to="Tiger" method="_on_Goat_AI2_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI3" to="Tiger" method="_on_Goat_AI3_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI4" to="Tiger" method="_on_Goat_AI4_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI5" to="Tiger" method="_on_Goat_AI5_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI6" to="Tiger" method="_on_Goat_AI6_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI7" to="Tiger" method="_on_Goat_AI7_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI8" to="Tiger" method="_on_Goat_AI8_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI9" to="Tiger" method="_on_Goat_AI9_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI10" to="Tiger" method="_on_Goat_AI10_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI11" to="Tiger" method="_on_Goat_AI11_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI12" to="Tiger" method="_on_Goat_AI12_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI13" to="Tiger" method="_on_Goat_AI13_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI14" to="Tiger" method="_on_Goat_AI14_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI15" to="Tiger" method="_on_Goat_AI15_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI16" to="Tiger" method="_on_Goat_AI16_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI17" to="Tiger" method="_on_Goat_AI17_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI18" to="Tiger" method="_on_Goat_AI18_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI19" to="Tiger" method="_on_Goat_AI19_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI20" to="Tiger" method="_on_Goat_AI20_goataiturnfinished"]
